--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bibliotecadb
+spring.datasource.url=jdbc:mysql://0.0.0.0:3306/bibliotecadb
 spring.datasource.username=dbuser
 spring.datasource.password=P@ssw0rd!
 spring.jpa.hibernate.ddl-auto=update
